tests/ui/layout/normalization-failure.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/normalization-failure.rs:50:9
   |
LL |         std::mem::transmute::<_, ()>(opaque::<T>().get());
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `<impl Project2 as Project2>::Assoc2` (unable to determine layout for `<impl Project2 as Project2>::Assoc2` because `<impl Project2 as Project2>::Assoc2` cannot be normalized)
   = note: target type: `()` (0 bits)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0512`.
